--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								 I'm Asantewaah Sarpong. A freelance front end developer.I provide web design services and
 								  work with startups to design effective and impactful websites
 								  I have a passion for UI effects and creating intuitive, dynamic designs </p>
-								<p> Click <a href="https://asantewaah.github.io/">here</a> to see my work</p>
+								<p> Click <a target="_blank" href="https://asantewaah.github.io/">here</a> to see my work</p>
 								
 							</div>
                     	</div>
@@ -221,7 +221,7 @@
 					<div class="row">
 						<div class="col-md-12 text-center   wow fadeInUp animated">
 							<div class="social">
-								<h2>Follow Me on Here</h2>
+								<h2>Follow Me Here</h2>
 								<ul class="icon_list">
 									<li><a href="https://www.facebook.com/dahlia.thiestle?ref=bookmarks"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="https://twitter.com/Asantewaah3"><i class="fa fa-twitter"></i></a></li>
